[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# bevy = { version = "0.11.0", features = ["wayland", "dynamic_linking"] }
#

[dependencies.bevy]
version = "0.11.0"
# Disable the default features if there are any that you do not want
default-features = false
features = [
  # These are the default features:
  # (re-enable whichever you like)

  # Bevy functionality:
  "bevy_asset",         # Assets management
  "bevy_audio",         # Builtin audio
  "bevy_winit",         # Window management
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_text",          # Text/font rendering

  # File formats:
  "png",    # PNG image format for simple 2D images
  "vorbis", # Audio: OGG Vorbis

  # Bevy functionality:
  "wayland",              # Linux: Support Wayland windowing system
  # Development/Debug features:
  # "dynamic_linking", # Dynamic linking for faster compile-times
]

